# Alphaforge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alphaforge/: __init__.py  cli.py
alphaforge/data/: api.py  parquet_store.py  synthetic.py  tushare_bundle.py  tushare_client.py  updater.py
alphaforge/explain/: __init__.py  _http.py  base.py  claude.py  deepseek.py  openai_compat.py  prompt.py
alphaforge/infra/: config.py  logger.py
alphaforge/notify/: __init__.py  base.py  feishu.py  qq.py  wecom.py
alphaforge/runtime/: backtest.py  constraints.py  costs.py  paper.py  paper_scheduler.py  paper_state.py
alphaforge/strategy/: __init__.py  base.py  registry.py
configs/: data.yaml
configs/run/: demo_momentum.paper.yaml  demo_momentum.yaml
docs/: architecture.md  backtest_quickstart.md  data_layer.md  notifications.md  paper_trading.md
strategies/: demo_momentum.py
tests/: conftest.py  test_backtest_engine.py  test_constraints.py  test_costs.py  test_explain.py  test_notify.py  test_paper_runner.py  test_registry.py  test_tushare_bundle.py
