[project]
name = "alphaforge"
version = "0.1.0"
description = "A-share quantitative stock-picking platform — pluggable strategies, backtest & paper trading."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "yiiqian" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",          # parquet IO
    "duckdb>=1.0",            # 查询引擎
    "tushare>=1.4.0",         # A 股数据源
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "click>=8.1",             # CLI
    "rich>=13.7",             # 终端表格
    "python-dateutil>=2.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipython>=8.0",
]

[project.scripts]
alphaforge = "alphaforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphaforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
